--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -36,4 +40,6 @@ dependencies {
     api 'com.github.Lauzy:LyricView:1.0.3'
     //高斯模糊
     api 'com.github.Commit451:NativeStackBlur:1.0.5'
+
+    api 'com.squareup.okhttp3:okhttp:3.14.1'
 }
