--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.musicplayer">
-
-    <!--结束本应用-->
-    <!--<uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />-->
+    <!-- 结束本应用 -->
+    <!-- <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" /> -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".utils.MyApplication"
@@ -16,9 +16,9 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/TranslucentTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
+        <activity android:name=".ui.activity.NetworkSearchActivity"></activity>
         <activity
             android:name=".ui.activity.MainActivity"
             android:theme="@style/TranslucentTheme">
@@ -62,7 +62,6 @@
             android:name=".service.PlayService$NotificationReceiver"
             android:enabled="true"
             android:exported="true" />
-
         <receiver
             android:name=".service.PlayService$UpdateNotificationReceiver"
             android:enabled="true"
@@ -71,7 +70,6 @@
                 <action android:name="com.musicplay.NOTIFICATION_UPDATE" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".ui.activity.PlayActivity$UIReceiver"
             android:enabled="true"
