--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
+//        jcenter()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,12 +18,16 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven {
-            url 'http://www.idescout.com/maven/repo/'
-            name 'IDEScout, Inc.'
-            url 'https://jitpack.io'
+//        jcenter()
+        maven { url 'http://www.idescout.com/maven/repo/'
+//            name 'IDEScout, Inc.'
+//            url 'https://jitpack.io'
         }
+
+        maven{ url 'https://jitpack.io'}
+        //阿里镜像
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+
     }
 }
 
