--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.musicplayer">
+
     <!-- 结束本应用 -->
     <!-- <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" /> -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".utils.MyApplication"
@@ -18,7 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/TranslucentTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activity.NetworkSearchActivity"></activity>
+
+        <service
+            android:name=".service.PlayService"
+            android:enabled="true"
+            android:exported="true"/>
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:theme="@style/TranslucentTheme">
@@ -52,11 +58,9 @@
         <activity
             android:name=".ui.activity.ScanLocalSongActivity"
             android:theme="@style/TranslucentTheme" />
+        <activity android:name=".ui.activity.NetworkSearchActivity" />
 
-        <service
-            android:name=".service.PlayService"
-            android:enabled="true"
-            android:exported="true" />
+
 
         <receiver
             android:name=".service.PlayService$NotificationReceiver"
